Changes in quota-tools from 3.17 to 4.00-pre1
* added liblber to the list of libraries needed for LDAP support (Michael Meskes)
* Rewritten configuration script to create config.h (Jan Kara)
* Use /proc/mounts for mountpoint scanning (Jan Kara)
* Removed use of reserved identifiers (Jan Kara)
* Improved manpage of quota_nld (Eddie Eyles)
* Fixed long option handling of quota_nld (Jan Kara)
* Fixed error reporting when rpc format specified on command line (Jan Kara)
* Convert quota limits using rq_bsize from RPC request (Jan Kara)
* Added noreturn attribute to die to avoid false warnings (Jan Kara)
* 64-bit quota support, rewritten some code to allow clean integration (Jan Kara)
* Improved header of quota an repquota output when -s option is used (Jan Kara)
* Fixed mountpoint scanning when NFS mountpoint is specified on command line (Jan Kara)
* Updated manpage of quotactl(2) (Jan Kara)

Changes in quota-tools from 3.16 to 3.17
* Updated quotactl(2) manpage to mention possible ERANGE error (Jan Kara)
* Fix hostname checking of rpc.rquotad. It could allow access even though hostname was in /etc/hosts.deny (Jan Kara)
* do not allow setting of user's grace time when softlimit is not exceeded (Jan Kara)
* fix reference to rpc manpage (anonymous reporter)
* add EXT4 (not only EXT4DEV) to the list of supported filesystems (Mingming Cao)
* fix setting of more than 31-bit block and inode limits (Gui Xiaohua)
* fixed bug in error reporting when quota reading fails (Jan Kara)
* added support for quota formats with hidden quota files (Jan Kara)
* remove IMMUTABLE flag from quota file in quotacheck (Jan Kara)
* fix bug in warnquota which could result in bogus hostname and domainname (anonymous reporter)
* implemented writing of messages that user got below hard/soft limits to quota_nld (Jan Kara)
* use PKG_CHECK_MODULES to check for DBUS (Ladislav Michnovic)
* Implement setting of charset for emails sent by warnquota (Michael Meskes)